# investment-warning-calculator

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  FRONTEND_BUILD_ROI.md  OPERATIONS.md  README.md  SECURITY.md  index.html  logo-mockups.html  logo.md  pyproject.toml  requirements.txt  robots.txt  serve.py  sitemap.xml  vercel.json
api/: cache-bust.py  caution-search.py  dart-financial.py  dart-search.py  debug.py  financial-model.py  stock-code.py  stock-overview.py  stock-price.py  telegram.py  warm-cache.py  warn-search.py
assets/: app.css  app.js  secondary_pages.js
data/: account-mapping.json  dart-corps.json  holidays.json  patchnotes.json
design_handoff_warning_calculator/: COMPONENTS.md  DESIGN_TOKENS.md  MIGRATION.md  README.md  TONE.md
lib/: alerting.py  api_routes.py  cache.py  dart.py  dart_base.py  dart_corp.py  dart_full.py  dart_registry.py  dart_report.py  errors.py  financial_api_security.py  financial_model.py  gemini.py  holidays.py  http_client.py  http_utils.py  investment_warning_dates.py  investment_warning_errors.py  investment_warning_release.py  investment_warning_rows.py  investment_warning_status.py  krx.py  naver.py  period.py  retry.py  supabase_client.py  telegram_commands.py  telegram_messages.py  telegram_transport.py  timeouts.py  usecases.py  validation.py  warm_cache.py
scripts/: check_frontend_smoke.py  check_frontend_tokens.py  set_telegram_commands.py  set_telegram_webhook.py  update_dart_corps.py
tests/: conftest.py  test_alerting.py  (+13 more)
(+16 files in other folders)
