[project]
name = "app"
version = "0.1.0"
dependencies = [ "supabase==2.28.3" ]
requires-python = "~=3.14.0"

[tool.pyright]
include = ["api", "lib", "scripts", "tests", "serve.py"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
